# pamn

./: .gitignore  CMakeLists.txt  README.md  pamn.py
data/: clip0027.txt  clip0028.txt  clip0071.txt  clip0072.txt  clip0073.txt  clip0074.txt  clip0075.txt  clip0076.txt  clip0077.txt  clip0078.txt  clip0079.txt  clip0080.txt  clip0081.txt  clip0082.txt  clip0083.txt  clip0084.txt  clip0085.txt  clip0086.txt  clip0087.txt  clip0089.txt  clip0096.txt  clip0097.txt  clip0098.txt  clip0099.txt  clip0100.txt  clip0101.txt  clip0102.txt  clip0103.txt  clip0104.txt  clip0105.txt  clip0106.txt  clip0107.txt  clip0108.txt  clip0109.txt  clip0110.txt  clip0112.txt  clip0113.txt  clip0114.txt  clip0115.txt  clip0117.txt  (+24 more)
include/: NSortProcessor.h  cmdline.h
src/: NSortProcessor.C  pamn.C
test/: init.txt  plot_tagging_efficiency.ipynb  run_pamn.sh
test/.ipynb_checkpoints/: plot_tagging_efficiency-checkpoint.ipynb
